Created serialization traits using darkfi-serial crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,14 @@ edition = "2021"
 
 [dependencies]
 sled = "0.34.7"
+
+# Darkfi serialization library
+darkfi-serial = {git = "https://codeberg.org/darkrenaissance/darkfi", optional = true}
+
+[dev-dependencies]
+# To execute async tests
+smol = "2.0.0"
+
+[features]
+async-serial = ["darkfi-serial/async"]
+serial = ["darkfi-serial"]
