Cargo.toml: included serial feature into async-serial

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,5 @@ smol = "2.0.0"
 
 [features]
 default = []
-async-serial = ["darkfi-serial/async"]
+async-serial = ["serial", "darkfi-serial/async"]
 serial = ["darkfi-serial"]
